# micrograd

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
example/: demo.py  matmul.py  mean.py  reshape.py  transpose.py
include/: Value.h  nn.h  tensor.h  util.h  value.h
src/: demo.cpp  main.cpp  main.py
